Only substantive change is flipping the order of the args in an ImplHelper.isAssignable call in FetchConfigurationImpl.  We want to test whether the type we're traversing to is derived from the type we're traversing from.
git-svn-id: https://svn.apache.org/repos/asf/incubator/openjpa/trunk@508459 13f79535-47bb-0310-9956-ffa450edef68